Actualizar color de variable --muted en modo oscuro

--- a/estilo.css
+++ b/estilo.css
@@ -25,7 +25,7 @@ html.dark {
     --bg: #003cff;
     --card: #78a8f1;
     --text: #000000;
-    --muted: #5595dd;
+    --muted: #66ff48;
     --primary: #00a2ff;
     --accent: #5fb1e9;
     --glass: rgba(36,41,54,0.7);
